--- a/app/scss/base/_variables.scss
+++ b/app/scss/base/_variables.scss
@@ -1,1 +1,24 @@
-
+//Color scheme
+//font
+$df: "Century Gothic",
+CenturyGothic,
+AppleGothic,
+sans-serif;
+//text
+$tw: #FFFFFF;
+//general
+$page-bg:#514947;
+//buttons
+$button-default-color:#FFF3A6;
+$light-hover:#FFFFFF;
+$dark-hover:#514947;
+$sb-pressed:#514947;
+$bb-pressed:#423C3A;
+//font-color
+$default-button-text-color:#423C3A;
+$active-button-t-color:#FFFFFF;
+$disablet-button-t-color:#828282;
+//link
+$link-default:#FFF3A6;
+$link-hover:#FFFFFF;
+$link-pressed:#FFF3A6;
