--- a/app/scss/global.scss
+++ b/app/scss/global.scss
@@ -2,10 +2,13 @@
 @import "base/_variables";
 @import "base/_mixins";
 @import "base/_reset";
-
 // Layout
 @import "layout/_general";
 @import "layout/_fonts";
-
+@import "layout/_WP";
+// Page styles
 // Page styles
 @import "modules/_header";
+@import "modules/_main";
+@import "modules/_info";
+@import "modules/_sidebar";
