--- a/app/scss/layout/_general.scss
+++ b/app/scss/layout/_general.scss
@@ -1,28 +1,169 @@
 * {
-	padding: 0;
-	margin: 0;
-	border: 0;
-	outline: none;
-	box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    border: 0;
+    outline: none;
+    box-sizing: border-box;
 }
 
 html {
-	height: 100%;
-	scroll-behavior: smooth;
+    height: 100%;
+    scroll-behavior: smooth;
 }
 
-body, html {
-	min-height: 100%;
-	width: 100%;
+body,
+html {
+    min-height: 100%;
+    width: 100%;
+    font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
 }
 
-.clear::after, .clear::before {
-	content: " ";
-	display: table;
+.clear::after,
+.clear::before {
+    content: " ";
+    display: table;
 }
 
 .clear::after {
-	clear: both;
+    clear: both;
 }
 
 // Main styles
+body {
+    position: relative;
+    background: rgb(244, 244, 244);
+    ;
+    //font-family: 'Bellota Text', cursive;
+}
+
+.hidden {
+    width: 0;
+    height: 0;
+    display: block;
+}
+
+.container {
+    margin: 0 auto;
+    padding: 0 10px;
+    max-width: 1140px;
+    margin-left: 11rem;
+    @media (max-width: 1200px) {
+        max-width: 1140px;
+    }
+    @media (max-width: 1024px) {
+        max-width: 960px;
+    }
+    @media (max-width: 768px) {
+        max-width: 766px;
+    }
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    gap: 10px;
+}
+
+section {
+    padding: 100px 0 0 0;
+}
+
+.link {
+    color: $tw;
+    text-decoration: none;
+    transition: all .3s;
+    &:hover {
+        color: $link-default;
+    }
+    &:visited {
+        text-decoration: none;
+    }
+}
+
+.active {
+    color: $link-default;
+    &:hover {
+        color: $light-hover;
+    }
+}
+
+.email {
+    text-transform: lowercase;
+}
+
+//buttons
+button::-moz-focus-inner {
+    border: 0;
+}
+
+.sm-button {
+    height: 75px;
+    display: flex;
+    align-items: center;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: $tw;
+    p {
+        padding-left: 20px;
+        font-size: 24px;
+    }
+    &:hover {
+        .svg-wrap {
+            svg {
+                //opacity: .8;
+            }
+            &:after {
+                background: $light-hover;
+            }
+        }
+    }
+    &:active {
+        .svg-wrap {
+            svg {
+                mix-blend-mode: exclusion;
+            }
+            &:after {
+                background: $bb-pressed;
+            }
+        }
+    }
+    .svg-wrap {
+        position: relative;
+        transition: all .3s;
+        svg {
+            @include pos($t: -17px, $l: -55px);
+            transform: rotate(-90deg);
+            @include size(15px, 40px);
+            z-index: 2;
+            transition: all .2s;
+            use {
+                transition: all .2s;
+            }
+        }
+        &:after {
+            content: '';
+            @include pos($t: -37px, $l: -85px);
+            @include size(75px);
+            background: $button-default-color;
+            border-radius: 50%;
+            z-index: 1;
+            transition: all .5s;
+            &:hover {
+                background: $active-button-t-color;
+            }
+        }
+    }
+}
+
+#trigger-info {
+    height: 1000px;
+    background: rgb(244, 244, 244);
+}
+
+//yellow round button
+//page 
+.headline {
+    font-size: 28px;
+    padding-left: 40px;
+    border-left: solid 2px white;
+}
