--- a/app/scss/layout/_general.scss
+++ b/app/scss/layout/_general.scss
@@ -31,9 +31,12 @@ html {
 // Main styles
 body {
     position: relative;
-    background: rgb(244, 244, 244);
-    ;
     //font-family: 'Bellota Text', cursive;
+}
+
+section {
+    background: #ffffff;
+    padding: 100px 0 0 0;
 }
 
 .hidden {
@@ -46,7 +49,7 @@ body {
     margin: 0 auto;
     padding: 0 10px;
     max-width: 1140px;
-    margin-left: 11rem;
+    padding-left: 5rem;
     @media (max-width: 1200px) {
         max-width: 1140px;
     }
@@ -62,10 +65,6 @@ body {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     gap: 10px;
-}
-
-section {
-    padding: 100px 0 0 0;
 }
 
 .link {
@@ -153,11 +152,6 @@ button::-moz-focus-inner {
             }
         }
     }
-}
-
-#trigger-info {
-    height: 1000px;
-    background: rgb(244, 244, 244);
 }
 
 //yellow round button
