add section aboutus, add section objects

--- a/app/layout/modal.html
+++ b/app/layout/modal.html
@@ -1,7 +1,7 @@
 
 <div class="modal">
-  <div class="modal-content">
-    <form action="">
+  <div class="modal__content">
+    <form class="grid" action="">
       <fieldset>
         <legend>Оставьте координаты, и мы с вами свяжемся</legend>
       </fieldset>
