--- a/app/layout/section-about.html
+++ b/app/layout/section-about.html
@@ -1,34 +1,52 @@
 
 <div class="container">
   <div class="grid">
-    <div class="headline">Angro.com.ua - Дом в Полтаве или Миргороде, новостройка, что бы вы не искали о недвижимости в Полтаве или Миргороде ответы есть на Angro.com.ua.</div>
-    <div class="title">О нас</div>
-    <div class="tile">
-      <svg>
-        <use xlink:href="#chalice"></use>
-      </svg>
-      <h3 class="tile__head">Профессионализм</h3>
-      <p class="tile__text">Сочитаем експертность и креативный подход</p>
-    </div>
-    <div class="tile">
-      <svg>
-        <use xlink:href="#star"></use>
-      </svg>
-      <h3 class="tile__head">Качество</h3>
-      <p class="tile__text">Все наши объекты выдержали проверку временем</p>
-    </div>
-    <div class="tile">
-      <svg>
-        <use xlink:href="#briefcase"></use>
-      </svg>
-      <h3 class="tile__head">Опыт</h3>
-      <p class="tile__text">Спроектировали, построили и управляем 4 объктами.</p>
-    </div><a class="link sm-button" href="#">
-      <div class="svg-wrap">
-        <svg>
-          <use xlink:href="#arrow"></use>
-        </svg>
+    <h3 class="headline">Angro.com.ua - Дом в Полтаве или Миргороде, новостройка, что бы вы не искали о недвижимости в Полтаве или Миргороде ответы есть на Angro.com.ua.</h3>
+    <h2 class="title">О нас</h2>
+    <div class="slider">
+      <div class="tile">
+        <div class="svg__wrap">
+          <svg>
+            <use xlink:href="#chalice"></use>
+          </svg>
+        </div>
+        <h3 class="tile__head">Профессионализм</h3>
+        <p class="tile__text">Сочитаем експертность и креативный подход</p>
       </div>
-      <p>Прокрутить вниз</p></a>
+      <div class="tile">
+        <div class="svg__wrap">
+          <svg>
+            <use xlink:href="#star"></use>
+          </svg>
+        </div>
+        <h3 class="tile__head">Качество</h3>
+        <p class="tile__text">Все наши объекты выдержали проверку временем</p>
+      </div>
+      <div class="tile">
+        <div class="svg__wrap">
+          <svg>
+            <use xlink:href="#briefcase"></use>
+          </svg>
+        </div>
+        <h3 class="tile__head">Опыт</h3>
+        <p class="tile__text">Спроектировали, построили и управляем 4 объктами.</p>
+      </div>
+      <div class="tile">
+        <div class="svg__wrap">
+          <svg>
+            <use xlink:href="#chalice"></use>
+          </svg>
+        </div>
+        <h3 class="tile__head">Профессионализм</h3>
+        <p class="tile__text">Сочитаем експертность и креативный подход</p>
+      </div>
+    </div>
+    <div class="link-wrap"><a class="link sm-button" href="#">
+        <div class="svg-wrap">
+          <svg>
+            <use xlink:href="#arrow"></use>
+          </svg>
+        </div>
+        <p>Узнать больше</p></a></div>
   </div>
 </div>
