--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -35,5 +35,6 @@ html(lang="en")
 <!--build:js js/main.min.js -->
     script(src="js/libs/jquery.min.js")
     script(src="js/libs/aos.js")
+    script(src="js/libs/slick.min.js")
     script(src="js/main.js")
 <!--endbuild-->
