--- a/app/pug/layout/head.pug
+++ b/app/pug/layout/head.pug
@@ -7,6 +7,8 @@ head
     link(rel="icon" href="images/favicon.png")
     <!--build:css css/styles.min.css-->
     link(rel="stylesheet" href="css/libs/aos.css")
+    link(rel="stylesheet" href="css/libs/slick.css")
+    link(rel="stylesheet" href="css/libs/slick-theme.css")
     link(rel="stylesheet" href="css/global.min.css")
     <!--endbuild-->
     <!--[if lt IE 9]>
