--- a/app/pug/layout/info.pug
+++ b/app/pug/layout/info.pug
@@ -6,7 +6,7 @@
         data-aos-anchor-placement="bottom")
     a.link
         p.top +38(050) 634 71 78
-        p.bottom.active(href="tel:+38(050)-634-71-78") Заказать звонок
+        p.bottom.active(href="tel:+380506347178") Заказать звонок
     a.link
         svg.top
             use(xlink:href="#apartament")
