--- a/app/pug/layout/modal.pug
+++ b/app/pug/layout/modal.pug
@@ -1,6 +1,6 @@
 .modal
-    .modal-content
-        form(action="")
+    .modal__content
+        form(action="").grid
             fieldset
                 legend Оставьте координаты, и мы с вами свяжемся
             label( for="username") Ваше имя
