--- a/app/pug/layout/section-articles.pug
+++ b/app/pug/layout/section-articles.pug
@@ -1,4 +1,4 @@
 .container
     .grid
-        .headline Строительство жилых домов сопряжено со множеством проблем.
-        .title Статьи
+        h3.headline Строительство жилых домов сопряжено со множеством проблем.
+        h2.title Статьи
