--- a/app/pug/layout/section-objects.pug
+++ b/app/pug/layout/section-objects.pug
@@ -1,4 +1,37 @@
 .container
-    .grid
-        .headline ТОЛЬКО ЛУЧШЕЕ ДЛЯ АМБИЦИОЗНЫХ И УСПЕШНЫХ
-        .title Наши объекты
+    .objects-slider
+        .objects-content
+            .slide
+                .text 
+                    h3.headline ТОЛЬКО ЛУЧШЕЕ ДЛЯ АМБИЦИОЗНЫХ И УСПЕШНЫХ
+                    h2.title Наши объекты
+                    h4.text__headline ЖК "На Сенной"
+                    p.text__text Жилищный комплекс «На Сенной» состоит из двух 8-ми этажных жилых домов в самом центре города. Комплекс расположен в тихом, уютном районе города. Разнообразие планировочных решений позволит каждому найти жилье на свой вкус. Рядом с домом находятся детский сад, общеобразовательная школа, магазины.
+                    .link-wrap
+                        a.link.sm-button(href="#")
+                            .svg-wrap
+                                svg
+                                    use(xlink:href="#arrow")
+                            p Посмотреть квартиры объекта
+                        a.link.sm-button(href="#")
+                            .svg-wrap
+                                svg
+                                    use(xlink:href="#arrow")
+                            p Посмотреть все объекты
+                .image__wrap
+                    img(src="images/object_img1.jpg")
+                    .icon_wrap
+                        a.link
+                            p Детсад
+                            svg
+                                use(xlink:href="#puzzle")       
+                        a.link
+                            p Школа
+                            svg
+                                use(xlink:href="#castle")  
+                        a.link
+                            p Парк
+                            svg
+                                use(xlink:href="#park")
+                            
+
