--- a/app/scss/base/_variables.scss
+++ b/app/scss/base/_variables.scss
@@ -8,6 +8,8 @@ sans-serif;
 $tw: #FFFFFF;
 //general
 $page-bg:#514947;
+$light-bg: #FFFFFF;
+$page-darken-bg: #423C3A;
 //buttons
 $button-default-color:#FFF3A6;
 $light-hover:#FFFFFF;
