--- a/app/scss/global.scss
+++ b/app/scss/global.scss
@@ -7,8 +7,10 @@
 @import "layout/_fonts";
 @import "layout/_WP";
 // Page styles
-// Page styles
 @import "modules/_header";
 @import "modules/_main";
 @import "modules/_info";
 @import "modules/_sidebar";
+@import "modules/_modal";
+@import "modules/_section-about";
+@import "modules/_swction-objects";
