--- a/app/layout/head.html
+++ b/app/layout/head.html
@@ -7,6 +7,8 @@
   <title>Angro</title>
   <link rel="icon" href="images/favicon.png"/><!--build:css css/styles.min.css-->
   <link rel="stylesheet" href="css/libs/aos.css"/>
+  <link rel="stylesheet" href="css/libs/slick.css"/>
+  <link rel="stylesheet" href="css/libs/slick-theme.css"/>
   <link rel="stylesheet" href="css/global.min.css"/><!--endbuild-->
 <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
