--- a/app/layout/info.html
+++ b/app/layout/info.html
@@ -1,7 +1,7 @@
 
 <div class="info" data-aos="fade-down" data-aos-anchor="#about" data-aos-easing="linear" data-aos-duration="400" data-aos-anchor-placement="bottom"><a class="link">
     <p class="top">+38(050) 634 71 78</p>
-    <p class="bottom active" href="tel:+38(050)-634-71-78">Заказать звонок</p></a><a class="link">
+    <p class="bottom active" href="tel:+380506347178">Заказать звонок</p></a><a class="link">
     <svg class="top">
       <use xlink:href="#apartament"></use>
     </svg>
