--- a/app/layout/section-articles.html
+++ b/app/layout/section-articles.html
@@ -1,7 +1,7 @@
 
 <div class="container">
   <div class="grid">
-    <div class="headline">Строительство жилых домов сопряжено со множеством проблем.</div>
-    <div class="title">Статьи</div>
+    <h3 class="headline">Строительство жилых домов сопряжено со множеством проблем.</h3>
+    <h2 class="title">Статьи</h2>
   </div>
 </div>
