--- a/app/pug/layout/section-about.pug
+++ b/app/pug/layout/section-about.pug
@@ -1,24 +1,36 @@
 .container
     .grid
-        .headline Angro.com.ua - Дом в Полтаве или Миргороде, новостройка, что бы вы не искали о недвижимости в Полтаве или Миргороде ответы есть на Angro.com.ua.
-        .title О нас
-        .tile
-            svg
-                use(xlink:href="#chalice")
-            h3.tile__head Профессионализм
-            p.tile__text Сочитаем експертность и креативный подход
-        .tile
-            svg
-                use(xlink:href="#star")
-            h3.tile__head Качество
-            p.tile__text Все наши объекты выдержали проверку временем
-        .tile
-            svg
-                use(xlink:href="#briefcase")
-            h3.tile__head Опыт
-            p.tile__text Спроектировали, построили и управляем 4 объктами.
-        a.link.sm-button(href="#")
-            .svg-wrap
-                svg
-                    use(xlink:href="#arrow")
-            p Прокрутить вниз
+        h3.headline Angro.com.ua - Дом в Полтаве или Миргороде, новостройка, что бы вы не искали о недвижимости в Полтаве или Миргороде ответы есть на Angro.com.ua.
+        h2.title О нас
+        .slider
+            .tile
+                .svg__wrap
+                    svg
+                        use(xlink:href="#chalice")
+                h3.tile__head Профессионализм
+                p.tile__text Сочитаем експертность и креативный подход
+            .tile
+                .svg__wrap
+                    svg
+                        use(xlink:href="#star")
+                h3.tile__head Качество
+                p.tile__text Все наши объекты выдержали проверку временем
+            .tile
+                .svg__wrap
+                    svg
+                        use(xlink:href="#briefcase")
+                h3.tile__head Опыт
+                p.tile__text Спроектировали, построили и управляем 4 объктами.
+            .tile
+                .svg__wrap
+                    svg
+                        use(xlink:href="#chalice")
+                h3.tile__head Профессионализм
+                p.tile__text Сочитаем експертность и креативный подход
+           
+        .link-wrap
+            a.link.sm-button(href="#")
+                .svg-wrap
+                    svg
+                        use(xlink:href="#arrow")
+                p Узнать больше
