--- a/app/scss/modules/_info.scss
+++ b/app/scss/modules/_info.scss
@@ -62,6 +62,7 @@
             text-transform: uppercase;
             line-height: 1.3rem;
             .top {
+                fill: $light-hover;
                 @include size(65px, 50px);
                 margin: .7rem;
             }
