add section article, add section apart]ments

--- a/app/layout/section-objects.html
+++ b/app/layout/section-objects.html
@@ -39,5 +39,43 @@
         </div>
       </div>
     </div>
+    <div class="objects-content">
+      <div class="slide">
+        <div class="text"> 
+          <h3 class="headline">ТОЛЬКО ЛУЧШЕЕ ДЛЯ АМБИЦИОЗНЫХ И УСПЕШНЫХ</h3>
+          <h2 class="title">Наши объекты</h2>
+          <h4 class="text__headline">ЖК "На Сенной"</h4>
+          <p class="text__text">Жилищный комплекс «На Сенной» состоит из двух 8-ми этажных жилых домов в самом центре города. Комплекс расположен в тихом, уютном районе города. Разнообразие планировочных решений позволит каждому найти жилье на свой вкус. Рядом с домом находятся детский сад, общеобразовательная школа, магазины.</p>
+          <div class="link-wrap"><a class="link sm-button" href="#">
+              <div class="svg-wrap">
+                <svg>
+                  <use xlink:href="#arrow"></use>
+                </svg>
+              </div>
+              <p>Посмотреть квартиры объекта</p></a><a class="link sm-button" href="#">
+              <div class="svg-wrap">
+                <svg>
+                  <use xlink:href="#arrow"></use>
+                </svg>
+              </div>
+              <p>Посмотреть все объекты</p></a></div>
+        </div>
+        <div class="image__wrap"><img src="images/object_img1.jpg"/>
+          <div class="icon_wrap"><a class="link">
+              <p>Детсад</p>
+              <svg>
+                <use xlink:href="#puzzle">      </use>
+              </svg></a><a class="link">
+              <p>Школа</p>
+              <svg>
+                <use xlink:href="#castle"> </use>
+              </svg></a><a class="link">
+              <p>Парк</p>
+              <svg>
+                <use xlink:href="#park"></use>
+              </svg></a></div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
