--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -22,10 +22,14 @@ html(lang="en")
                         p Прокрутить вниз
         section#about.about
             include layout/section-about.pug
-        section.objects
+        section#objects.objects
             include layout/section-objects.pug
-        section.articles
+        section#articles.articles
             include layout/section-articles.pug
+        section#apartments.apartments
+            include layout/section-apartments.pug
+        section#info.contact
+            include layout/section-contact.pug
         footer
 <!-- modal -->
         include layout/modal.pug
