--- a/app/layout/section-articles.html
+++ b/app/layout/section-articles.html
@@ -1,7 +1,27 @@
 
+<div class="bg__animate">
+  <div class="bg__img"><img src="images/acticlebg1.jpg"/></div>
+  <div class="bg__img"><img src="images/acticlebg2.jpg"/></div>
+</div>
 <div class="container">
   <div class="grid">
     <h3 class="headline">Строительство жилых домов сопряжено со множеством проблем.</h3>
     <h2 class="title">Статьи</h2>
+    <div class="articles__content">
+      <div class="article">
+        <h4 class="article__titile">ДОЛЛАР В КВАДРАТЕ: КАК «КВАРТИРНЫЙ ВОПРОС»  СПАСАЕТ НАКОПЛЕНИЯ УКРАИНЦЕВ</h4>
+        <p class="article__text">Экономический кризис в Украине продолжается. Украинцы спасают свои сбережения, вкладывая их в квадратные метры. Щедрые предложения банков, сулящих высокие проценты, не могут победить страх потерять «нажитое непосильным трудом». Все уменьшающееся доверие к банковским сейфам и хранению «под подушкой» приводит к тому, что накопления вкладываются в фактически любую недвижимость, на которую этих накоплений хватает. О том, как и почему застройщики заняли место банков, рассказывает банкир Василий Невмержицкий...</p>
+      </div>
+      <div class="article">
+        <h4 class="article__titile">ДОЛЛАР В КВАДРАТЕ: КАК «КВАРТИРНЫЙ ВОПРОС»  СПАСАЕТ НАКОПЛЕНИЯ УКРАИНЦЕВ</h4>
+        <p class="article__text">Экономический кризис в Украине продолжается. Украинцы спасают свои сбережения, вкладывая их в квадратные метры. Щедрые предложения банков, сулящих высокие проценты, не могут победить страх потерять «нажитое непосильным трудом». Все уменьшающееся доверие к банковским сейфам и хранению «под подушкой» приводит к тому, что накопления вкладываются в фактически любую недвижимость, на которую этих накоплений хватает. О том, как и почему застройщики заняли место банков, рассказывает банкир Василий Невмержицкий...</p>
+      </div>
+    </div><a class="link sm-button" href="#">
+      <div class="svg-wrap">
+        <svg>
+          <use xlink:href="#arrow"></use>
+        </svg>
+      </div>
+      <p>Посмотреть все статьи</p></a>
   </div>
 </div>
