--- a/app/pug/layout/section-articles.pug
+++ b/app/pug/layout/section-articles.pug
@@ -1,4 +1,23 @@
+.bg__animate
+    .bg__img
+        img(src="images/acticlebg1.jpg")
+    .bg__img
+        img(src="images/acticlebg2.jpg")
+
 .container
     .grid
         h3.headline Строительство жилых домов сопряжено со множеством проблем.
         h2.title Статьи
+        .articles__content
+            .article
+                h4.article__titile ДОЛЛАР В КВАДРАТЕ: КАК «КВАРТИРНЫЙ ВОПРОС»  СПАСАЕТ НАКОПЛЕНИЯ УКРАИНЦЕВ
+                p.article__text Экономический кризис в Украине продолжается. Украинцы спасают свои сбережения, вкладывая их в квадратные метры. Щедрые предложения банков, сулящих высокие проценты, не могут победить страх потерять «нажитое непосильным трудом». Все уменьшающееся доверие к банковским сейфам и хранению «под подушкой» приводит к тому, что накопления вкладываются в фактически любую недвижимость, на которую этих накоплений хватает. О том, как и почему застройщики заняли место банков, рассказывает банкир Василий Невмержицкий...
+            .article
+                h4.article__titile ДОЛЛАР В КВАДРАТЕ: КАК «КВАРТИРНЫЙ ВОПРОС»  СПАСАЕТ НАКОПЛЕНИЯ УКРАИНЦЕВ
+                p.article__text Экономический кризис в Украине продолжается. Украинцы спасают свои сбережения, вкладывая их в квадратные метры. Щедрые предложения банков, сулящих высокие проценты, не могут победить страх потерять «нажитое непосильным трудом». Все уменьшающееся доверие к банковским сейфам и хранению «под подушкой» приводит к тому, что накопления вкладываются в фактически любую недвижимость, на которую этих накоплений хватает. О том, как и почему застройщики заняли место банков, рассказывает банкир Василий Невмержицкий...
+        a.link.sm-button(href="#")
+            .svg-wrap
+                svg
+                    use(xlink:href="#arrow")
+            p Посмотреть все статьи
+
