add section contacts, add footer

--- a/app/layout/section-contact.html
+++ b/app/layout/section-contact.html
@@ -16,9 +16,11 @@
       </label>
       <div class="checkbox-wrap">
         <input id="check" type="checkbox"/>
-        <label for="check">Я даю согласие на обработку моих персональных данных согласно </label><a class="link">политике конфиденциальности </a>
+        <div class="text-wrap">
+          <label for="check">Я даю согласие на обработку моих персональных данных согласно </label><a class="link" href="#">политике конфиденциальности </a>
+        </div>
       </div>
-      <button>Отправить запрос</button>
+      <button class="submit">Отправить запрос</button>
     </form>
   </div>
 </div>
