--- a/app/pug/layout/section-contact.pug
+++ b/app/pug/layout/section-contact.pug
@@ -11,6 +11,7 @@
                 input#email(type="email")
             .checkbox-wrap
                 input#check(type="checkbox")
-                label( for="check") Я даю согласие на обработку моих персональных данных согласно 
-                a.link политике конфиденциальности 
-            button Отправить запрос
+                .text-wrap
+                    label( for="check") Я даю согласие на обработку моих персональных данных согласно 
+                    a(href="#").link политике конфиденциальности 
+            button.submit Отправить запрос
