--- a/app/scss/layout/_general.scss
+++ b/app/scss/layout/_general.scss
@@ -160,6 +160,13 @@ button::-moz-focus-inner {
     }
 }
 
+.submit {
+    font-size: 1.25rem;
+    color: #828282;
+    background: #FFF3A6;
+    font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
+}
+
 //yellow round button
 //page 
 .headline {
