--- a/app/scss/global.scss
+++ b/app/scss/global.scss
@@ -17,3 +17,4 @@
 @import "modules/_section-articles";
 @import "modules/_section-apartments";
 @import "modules/_section-contact";
+@import "modules/_footer";
